Add + styled header title & paragraph, Index+Style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
+    <!-- /font -->
     <title>Meet your team</title>
-
 </head>
 
 <body>
     <!-- title -->
     <header>
-        
+
+        <div class="title debug format">
+            <h1>Meet your team</h1>
+        </div>
+
+        <!-- paragraph -->
+        <div class="paragraph debug format">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam commodi dolorem vero inventore id
+                accusantium fugiat, in nihil nesciunt labore, soluta nemo modi libero minima debitis dolore earum
+                accusamus voluptates.
+            </p>
+        </div>
+        <!-- /paragraph -->
+
     </header>
     <!-- /title -->
 
