--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <!-- title -->
     <header>
 
-        <div class="title debug format">
+        <div class="title debug format-header">
             <h1>Meet your team</h1>
         </div>
 
         <!-- paragraph -->
-        <div class="paragraph debug format">
+        <div class="paragraph debug format-header">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam commodi dolorem vero inventore id
                 accusantium fugiat, in nihil nesciunt labore, soluta nemo modi libero minima debitis dolore earum
                 accusamus voluptates.
@@ -36,7 +36,41 @@
 
     <!-- main page-->
     <main>
-        
+
+        <!-- main page container -->
+        <div class="main-container format-cards debug clearfix">
+
+            <!-- sections cards -->
+            <section class="card clearfix debug">
+
+                <img class="floatleft"src="./assets/img/male1.png" alt="male-profile-1">
+
+                <!-- info card -->
+                <!-- <section class="info debug2">
+                    <h3>Marco bianchi</h3>
+                    <p>Designer</p>
+                    <a href="mailto:**">marcobianchi@team.com</a>
+                </section> -->
+                <!-- /info card -->
+
+            </section>
+            <!-- /sections cards -->
+
+            <!-- sections cards -->
+            <!-- <section class="card debug2 ">
+                2
+            </section> -->
+            <!-- /sections cards -->
+
+            <!-- sections cards -->
+            <!-- <section class="card debug2 ">
+                3
+            </section> -->
+            <!-- /sections cards -->
+
+        </div>
+        <!-- /main page container -->
+
     </main>
     <!-- /main page-->
 </body>
