Add 3 profile to main index html + style CSS

--- a/index.html
+++ b/index.html
@@ -38,35 +38,53 @@
     <main>
 
         <!-- main page container -->
-        <div class="main-container format-cards debug clearfix">
+        <div class="main-container format-cards clearfix debug">
 
-            <!-- sections cards -->
-            <section class="card clearfix debug">
+                <!-- sections cards -->
+                <section class="card floatleft">
 
-                <img class="floatleft"src="./assets/img/male1.png" alt="male-profile-1">
+                    <img class="floatleft" src="./assets/img/male1.png" alt="male-profile-1">
 
-                <!-- info card -->
-                <!-- <section class="info debug2">
-                    <h3>Marco bianchi</h3>
-                    <p>Designer</p>
-                    <a href="mailto:**">marcobianchi@team.com</a>
-                </section> -->
-                <!-- /info card -->
+                    <!-- info card -->
+                    <section class="info">
+                        <h3 class="name">Marco bianchi</h3>
+                        <p class="job">Designer</p>
+                        <a href="mailto:**">marcobianchi@team.com</a>
+                    </section>
+                    <!-- /info card -->
 
-            </section>
-            <!-- /sections cards -->
+                </section>
+                <!-- /sections cards -->
 
-            <!-- sections cards -->
-            <!-- <section class="card debug2 ">
-                2
-            </section> -->
-            <!-- /sections cards -->
+                <!-- sections cards -->
+                <section class="card floatleft">
 
-            <!-- sections cards -->
-            <!-- <section class="card debug2 ">
-                3
-            </section> -->
-            <!-- /sections cards -->
+                    <img class="floatleft" src="./assets/img/male1.png" alt="male-profile-1">
+
+                    <!-- info card -->
+                    <section class="info">
+                        <h3 class="name">Marco bianchi</h3>
+                        <p class="job">Designer</p>
+                        <a href="mailto:**">marcobianchi@team.com</a>
+                    </section>
+                    <!-- /info card -->
+                </section>
+                <!-- /sections cards -->
+
+                <!-- sections cards -->
+                <section class="card floatleft">
+
+                    <img class="floatleft" src="./assets/img/male1.png" alt="male-profile-1">
+
+                    <!-- info card -->
+                    <section class="info">
+                        <h3 class="name">Marco bianchi</h3>
+                        <p class="job">Designer</p>
+                        <a href="mailto:**">marcobianchi@team.com</a>
+                    </section>
+                    <!-- /info card -->
+                </section>
+                <!-- /sections cards -->
 
         </div>
         <!-- /main page container -->
