fix space between cards and info index + css

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <!-- main page container -->
         <div class="main-container format-cards clearfix debug">
 
+            <!-- line1 -->
+            <section class="line clearfix">
+
                 <!-- sections cards -->
                 <section class="card floatleft">
 
@@ -57,15 +60,15 @@
                 <!-- /sections cards -->
 
                 <!-- sections cards -->
-                <section class="card floatleft">
+                <section class="card floatleft center">
 
-                    <img class="floatleft" src="./assets/img/male1.png" alt="male-profile-1">
+                    <img class="floatleft" src="./assets/img/female1.png" alt="female-profile-1">
 
                     <!-- info card -->
                     <section class="info">
-                        <h3 class="name">Marco bianchi</h3>
-                        <p class="job">Designer</p>
-                        <a href="mailto:**">marcobianchi@team.com</a>
+                        <h3 class="name">Laura Rossi</h3>
+                        <p class="job">Front-end Developer</p>
+                        <a href="mailto:**">laurarossi@team.com</a>
                     </section>
                     <!-- /info card -->
                 </section>
@@ -74,17 +77,70 @@
                 <!-- sections cards -->
                 <section class="card floatleft">
 
-                    <img class="floatleft" src="./assets/img/male1.png" alt="male-profile-1">
+                    <img class="floatleft" src="./assets/img/male2.png" alt="male-profile-2">
 
                     <!-- info card -->
                     <section class="info">
-                        <h3 class="name">Marco bianchi</h3>
-                        <p class="job">Designer</p>
-                        <a href="mailto:**">marcobianchi@team.com</a>
+                        <h3 class="name">Giorgio Verdi</h3>
+                        <p class="job">Back-end Developer</p>
+                        <a href="mailto:**">giorgioverdi@team.com</a>
                     </section>
                     <!-- /info card -->
                 </section>
                 <!-- /sections cards -->
+            </section>
+            <!-- /line2 -->
+
+            <!-- line2 -->
+            <section class="line2 clearfix">
+                <!-- sections cards -->
+                <section class="card floatleft">
+
+                    <img class="floatleft" src="./assets/img/female2.png" alt="female-profile-2">
+
+                    <!-- info card -->
+                    <section class="info">
+                        <h3 class="name">MARTA IPSUM</h3>
+                        <p class="job">SEO Specialist</p>
+                        <a href="mailto:**">martaipsum@team.com</a>
+                    </section>
+                    <!-- /info card -->
+
+                </section>
+                <!-- /sections cards -->
+
+                <!-- sections cards -->
+                <section class="card floatleft center">
+
+                    <img class="floatleft" src="./assets/img/male3.png" alt="male-profile-3">
+
+                    <!-- info card -->
+                    <section class="info">
+                        <h3 class="name">ROBERTO LOREM</h3>
+                        <p class="job">Project menager</p>
+                        <a href="mailto:**">robertolorem@team.com</a>
+                    </section>
+                    <!-- /info card -->
+                </section>
+                <!-- /sections cards -->
+
+                <!-- sections cards -->
+                <section class="card floatleft">
+
+                    <img class="floatleft" src="./assets/img/female3.png" alt="female-profile-3">
+
+                    <!-- info card -->
+                    <section class="info">
+                        <h3 class="name">DANIELA AMET</h3>
+                        <p class="job">Analyst</p>
+                        <a href="mailto:**">danielaamet@team.com</a>
+                    </section>
+                    <!-- /info card -->
+                </section>
+                <!-- /sections cards -->
+
+            </section>
+            <!-- /line2 -->
 
         </div>
         <!-- /main page container -->
