FIX shadows and removed debug class index + style

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <!-- title -->
     <header>
 
-        <div class="title debug format-header">
+        <div class="title format-header">
             <h1>Meet your team</h1>
         </div>
 
         <!-- paragraph -->
-        <div class="paragraph debug format-header">
+        <div class="paragraph format-header">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam commodi dolorem vero inventore id
                 accusantium fugiat, in nihil nesciunt labore, soluta nemo modi libero minima debitis dolore earum
                 accusamus voluptates.
@@ -38,7 +38,7 @@
     <main>
 
         <!-- main page container -->
-        <div class="main-container format-cards clearfix debug">
+        <div class="main-container format-cards clearfix">
 
             <!-- line1 -->
             <section class="line clearfix">
